Introduce checkstyle, eslint and prettier.